Final before cart.js merge

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -110,6 +110,7 @@
     "quantity": "Quantity",
     "priced_from_html": "From {{ price }}",
     "on_sale_html": "On sale for {{ price }}",
+    "on_sale": "On sale",
     "original_price": "Originally"
   },
   "blog": {
