--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -69,7 +69,17 @@
   "cart": {
     "title": "Cart",
     "empty": "Your cart is empty :(",
+    "note": "Customer Notes",
+    "total": "Total",
+    "checkout": "Checkout",
+    "shipping_at_checkout": "Shipping calculated at checkout",
     "back_to_shop_html": "Continue browsing <a href=\"/collections/all\">here</a>",
+    "label": {
+      "product": "Product",
+      "price": "Price",
+      "quantity": "Quantity",
+      "subtotal": "Subtotal"
+    },
     "count": {
       "one": "item",
       "other": "items"
