--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -121,7 +121,9 @@
     "priced_from_html": "From {{ price }}",
     "on_sale_html": "On sale for {{ price }}",
     "on_sale": "On sale",
-    "original_price": "Originally"
+    "original_price": "Originally",
+    "previous_product": "Previous Product",
+    "next_product": "Next Product"
   },
   "blog": {
     "title": "Blog",
