--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -83,6 +83,7 @@
   },
   "cart": {
     "title": "Cart",
+    "view_cart": "View Cart",
     "product": "Product",
     "price": "Price",
     "quantity": "Quantity",
