Minor language fix

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -137,7 +137,7 @@
     "next_product": "Next"
   },
   "home_page": {
-    "title": "Home Page"
+    "title": "Home"
   },
   "blog": {
     "title": "Blog",
