Customised new password page
Now with sections :D

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -207,5 +207,17 @@
       "collection_title": "Example Collection Title",
       "items_with_count": "{{ count }} Items"
     }
+  },
+  "password_page": {
+    "opening_soon": "Opening Soon",
+    "password_link": "Have a password?",
+    "login_form_heading": "Enter with a password",
+    "login_form_password_label": "Password",
+    "login_form_password_placeholder": "Your password",
+    "login_form_submit": "Enter",
+    "signup_form_email_label": "Email",
+    "signup_form_success": "We will send you an email right before we open!",
+    "admin_link_html": "Are you the store owner? <a href=\"\/admin\" class=\"text-link\">Log in here<\/a>",
+    "powered_by_shopify_html": "This shop will be powered by {{ shopify }}"
   }
 }
