--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -219,5 +219,17 @@
     "signup_form_success": "We will send you an email right before we open!",
     "admin_link_html": "Are you the store owner? <a href=\"\/admin\" class=\"text-link\">Log in here<\/a>",
     "powered_by_shopify_html": "This shop will be powered by {{ shopify }}"
+  },
+  "gift_cards": {
+    "title_html": "Here's your {{ value }} gift card for {{ shop }}!",
+    "subtext": "Your gift card",
+    "disabled": "Disabled",
+    "expired": "Expired on {{ expiry }}",
+    "active": "Expires on {{ expiry }}",
+    "redeem_html": "Use this code at checkout to redeem your {{ value }} gift card",
+    "shop_link": "Start shopping",
+    "print": "Print this gift card",
+    "remaining_html": "{{ balance }} of",
+    "add_to_apple_wallet": "Add to Apple Wallet"
   }
 }
