Added Endless Scrolling JS and templates

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -121,6 +121,9 @@
       "price_descending": "Price, high to low",
       "date_descending": "Date, new to old",
       "date_ascending": "Date, old to new"
+    },
+    "endless": {
+      "loading": "Loading..."
     }
   },
   "product": {
