New container layouts and order detail page
“.container” class elements can now use “xl, l, m, s” helpers so you
can have custom container sizes (based on breakpoints)

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -49,6 +49,26 @@
       "fulfillment_status": "Fullfilment Status",
       "total": "Total"
     },
+    "order": {
+      "title": "Order {{ name }}",
+      "date": "Order date",
+      "cancelled": "Order Cancelled on {{ date }}",
+      "cancelled_reason": "Reason: {{ reason }}",
+      "billing_address": "Billing Address",
+      "payment_status": "Payment Status",
+      "fulfillment_status": "Fullfilment Status",
+      "shipping_address": "Shipping Address",
+      "discount": "Discount",
+      "shipping": "Shipping",
+      "tax": "Tax",
+      "product": "Product",
+      "sku": "SKU",
+      "price": "Price",
+      "quantity": "Quantity",
+      "total": "Total",
+      "fulfilled_at": "Fulfilled {{ date }}",
+      "subtotal": "Subtotal"
+    },
     "address": {
       "title": "Addresses",
       "default": "Default Address",
