Pagination methods compatibility improvements

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -6,8 +6,8 @@
     "pagination": {
       "loadmore": "Load More",
       "loading": "Loading...",
-      "previous": "<",
-      "next": ">"
+      "previous": "←",
+      "next": "→"
     }
   },
   "date_formats": {
