--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -147,6 +147,10 @@
       "price_descending": "Price, high to low",
       "date_descending": "Date, new to old",
       "date_ascending": "Date, old to new"
+    },
+    "filter": {
+      "title": "Filter",
+      "all_items": "All '{{ collection }}'"
     }
   },
   "product": {
