--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -4,5 +4,23 @@
       "page": "Page {{ page }}",
       "tags": "Tagged with {{ tags }}"
     }
+  },
+  "customer": {
+    "account": "Account",
+    "logged_in_as_html": "Logged in as {{ first_name }}",
+    "log_out": "Log out",
+    "log_in": "Log in",
+    "create_account": "Create account"
+  },
+  "cart": {
+    "title": "Cart",
+    "item_count": {
+      "one": "item",
+      "other": "items"
+    }
+  },
+  "search": {
+    "title": "Search",
+    "submit": "Submit"
   }
 }
