--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -3,14 +3,16 @@
     "accessibility": {
       "skip_to_content": "Skip to content"
     },
+    "common": {
+      "close": "Close"
+    },
     "meta": {
       "tags": "Tagged \"{{ tags }}\"",
       "page": "Page {{ page }}"
     },
     "404": {
       "title": "404 Page Not Found",
-      "subtext_html":
-        "The page you requested does not exist. Click <a href=\"/collections/all\">here</a> to continue shopping."
+      "subtext_html": "The page you requested does not exist. Click <a href=\"/collections/all\">here</a> to continue shopping."
     },
     "password_page": {
       "opening_soon": "Opening Soon",
