:cart: Update to cartfox implemtation, add Focus NPM module

--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -99,6 +99,7 @@
       "subtotal": "Subtotal",
       "shipping_at_checkout": "Shipping & taxes calculated at checkout",
       "update": "Update Cart",
+      "view": "View Cart",
       "checkout": "Check Out",
       "empty": "Your cart is currently empty.",
       "cookies_required": "Enable cookies to use the shopping cart",
