♻️ Upgrade to render
The 'include' tag has been superceeded by 'render'. See https://help.shopify.com/en/themes/liquid/tags/theme-tags#render for more.

--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -117,8 +117,21 @@
   "collections": {
     "general": {
       "no_matches": "Sorry, there are no products in this collection",
-      "link_title": "Browse our {{ title }} collection"
-    }
+      "link_title": "Browse our {{ title }} collection",
+      "sort_by": "Sort by"
+    },
+    "sort": {
+      "title": "Sort by",
+      "manual": "Default",
+      "best-selling": "Best selling",
+      "title-ascending": "A-Z",
+      "title-descending": "Z-A",
+      "price-ascending": "Lowest price",
+      "price-descending": "Highest price",
+      "created-descending": "Newest",
+      "created-ascending": "Oldest"
+    },
+    "items_per_page": "Items per page"
   },
   "contact": {
     "form": {
